--- a/hello-world.yml
+++ b/hello-world.yml
@@ -1,8 +1,11 @@
 name: yep--yaggr
 security:
+  user:
+   name: user
+   password: user
   basic:
-    enabled: false
+    enabled: true
 
 management:
   security:
-    enabled: false 
+    enabled: true 
