--- a/greeting-config.yml
+++ b/greeting-config.yml
@@ -1,10 +1,7 @@
 security:
-  user:
-   name: user
-   password: user
   basic:
-    enabled: true
+    enabled: false
 
 management:
   security:
-    enabled: true 
+    enabled: false 
